spacing fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -25,11 +25,11 @@ $font-family-sans-serif:  'Merriweather', serif !default;
 }
 
 body {
-  padding-top: 70px;
+  padding-top: 60px;
 }
 
 .header {
-  padding-top: 40px;
+  padding-top: 50px;
 }
 
 .anchor {
